--- a/packages/vllm/zarf-config.yaml
+++ b/packages/vllm/zarf-config.yaml
@@ -8,3 +8,4 @@ package:
       model_repo_id: "TheBloke/Synthia-7B-v2.0-GPTQ"
       model_revision: "gptq-4bit-32g-actorder_True"
       model_path: "/data/.model/"
+      name_override: "vllm"
