--- a/packages/vllm/chart/templates/pvc.yaml
+++ b/packages/vllm/chart/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
-kind: PersistentVolumeCLFAIm
+kind: PersistentVolumeClaim
 metadata:
-    name: lfai-{{ .Values.nameOverride }}-pv-cLFAIm
+    name: lfai-{{ .Values.nameOverride }}-pv-claim
     namespace: {{ .Release.Namespace | default "leapfrogai" }}
 spec:
   {{- if .Values.persistence.storageClass }}
