--- a/packages/vllm/zarf.yaml
+++ b/packages/vllm/zarf.yaml
@@ -66,18 +66,26 @@ variables:
     default: "USER: {}\n"
   - name: PROMPT_FORMAT_CHAT_ASSISTANT
     default: "ASSISTANT: {}\n"
-  - name: PROMPT_FORMAT_DEFAULTS_TOP_P
-    description: "The cumulative probability threshold for token sampling, where 1.0 represents no restriction"
-    default: "1.0"
-    pattern: ^(0(\.\d+)?|1(\.0+)?)$
-  - name: PROMPT_FORMAT_DEFAULTS_TOP_K
-    description: "The number of top-K tokens to consider during sampling, where 0 disables top-K sampling"
-    default: "0"
-    pattern: ^\d+$
   - name: TEMPERATURE
     description: "Controls the randomness of the model's output"
     default: "0.1"
     pattern: ^(0(\.\d+)?|1(\.0+)?)$
+  - name: TOP_P
+    description: "The cumulative probability threshold for token sampling, where 1.0 represents no restriction"
+    default: "1.0"
+    pattern: ^(0(\.\d+)?|1(\.0+)?)$
+  - name: TOP_K
+    description: "The number of top-K tokens to consider during sampling, where 0 disables top-K sampling"
+    default: "0"
+    pattern: ^\d+$
+  - name: REPETITION_PENALTY
+    description: "The penalty value for repetition in generation"
+    default: "1.0"
+    pattern: ^(0(\.\d+)?|1(\.0+)?)$
+  - name: MAX_NEW_TOKENS
+    description: "Maximum new tokens to generate"
+    default: "8192"
+    pattern: ^\d+$
   # Pod deployment configuration
   - name: GPU_LIMIT
     description: "The GPU limit for the model inferencing. Must be 1 or more."
