fix misformatted sdk config

--- a/packages/vllm/chart/templates/leapfrogai-sdk-configmap.yaml
+++ b/packages/vllm/chart/templates/leapfrogai-sdk-configmap.yaml
@@ -6,32 +6,32 @@ metadata:
 data:
   config.yaml: |
     model:
-      source: {{ .Values.leapfrogaiConfig.model.source }}
-    max_context_length: {{ .Values.leapfrogaiConfig.maxContextLength }}
+      source: {{ .Values.leapfrogaiConfig.model.source | quote }}
+    max_context_length: {{ .Values.leapfrogaiConfig.maxContextLength | quote }}
     stop_tokens:
-    {{- $stopTokens := .Values.leapfrogaiConfig.stopTokens }}
-    {{- range $stopToken := splitList ", " .Values.leapfrogaiConfig.stopTokens }}
-    - {{ printf "%s" $stopToken }}
-    {{- end }}
+      {{- $stopTokens := .Values.leapfrogaiConfig.stopTokens }}
+      {{- range $stopToken := splitList ", " .Values.leapfrogaiConfig.stopTokens }}
+      - {{ printf "%s" $stopToken }}
+      {{- end }}
     prompt_format:
     {{- with .Values.leapfrogaiConfig.promptFormat.chat }}
       chat:
       {{- if .system }}
-        system: {{ .system }}
+        system: {{ .system | quote }}
       {{- end }}
       {{- if .assistant }}
-        assistant: {{ .assistant }}
+        assistant: {{ .assistant | quote }}
       {{- end }}
       {{- if .user }}
-        user: {{ .user }}
+        user: {{ .user | quote }}
       {{- end }}
       {{- if .function }}
-        function: {{ .function }}
+        function: {{ .function | quote }}
       {{- end }}
     {{- end }}
     defaults:
-      temperature: {{ .Values.leapfrogaiConfig.defaults.temperature }}
-      top_p: {{ .Values.leapfrogaiConfig.defaults.topP }}
-      top_k: {{ .Values.leapfrogaiConfig.defaults.topK }}
-      repetition_penalty: {{ .Values.leapfrogaiConfig.defaults.repetitionPenalty }}
-      max_new_tokens: {{ .Values.leapfrogaiConfig.defaults.maxNewTokens }}
+      temperature: {{ .Values.leapfrogaiConfig.defaults.temperature | quote }}
+      top_p: {{ .Values.leapfrogaiConfig.defaults.topP | quote }}
+      top_k: {{ .Values.leapfrogaiConfig.defaults.topK | quote }}
+      repetition_penalty: {{ .Values.leapfrogaiConfig.defaults.repetitionPenalty | quote }}
+      max_new_tokens: {{ .Values.leapfrogaiConfig.defaults.maxNewTokens | quote }}
